[project]
name = "aas-timeline"
version = "0.0.1"
description = "A digital humanities project exploring relationships between embeddings in 3D vector space"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "pymupdf",
]

[project.optional-dependencies]
build = [
    "transformers[torch]",
    "hf_transfer",
    "torch",
    "einops",
    "ninja",
    "setuptools",
    "packaging",
    "torch-pca",
    "natsort",
]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.6.3"
requires-dist = ["torch", "einops"]
